upload all files

--- a/products/protective/antitarnish-for-copper.html
+++ b/products/protective/antitarnish-for-copper.html
@@ -219,8 +219,8 @@
           <p data-i18n-key="intro_p1">
             สารป้องกันการหมอง (Anti-Tarnish Agent) สำหรับทองแดงและทองเหลือง ใช้เป็นขั้นตอนสุดท้ายหลังการชุบ/กัดเงา เพื่อป้องกันคราบออกไซด์และช่วยไล่คราบน้ำ ทำให้ผิวโลหะคงความเงางามได้ยาวนานขึ้น 💧
           </p>
-          <p>
-            หลักการทำงานคือสร้าง <strong>ชั้นฟิล์มใสบาง ๆ</strong> บนผิวโลหะ ทำหน้าที่เป็นเกราะกั้นออกซิเจน/สารเคมีในอากาศ ลดการเกิดคราบหมอง และช่วยให้ชิ้นงานแห้งเร็ว ลดรอยคราบน้ำ
+          <p data-i18n-key="intro_p2">
+            กลไกคือการสร้าง <strong>ชั้นฟิล์มใสบาง ๆ</strong> บนผิวโลหะ เพื่อกั้นออกซิเจน/สารเคมีในอากาศ ลดการเกิดคราบหมอง และช่วยให้ชิ้นงานแห้งเร็ว ลดรอยคราบน้ำ
           </p>
         </div>
       </section>
@@ -242,43 +242,43 @@
       <!-- Features (Icon card grid) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
         <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของ Anti-Tarnish for Copper</h2>
-        <p class="lead" data-i18n-key="features_lead">ป้องกันหมอง ไล่น้ำ แห้งเร็ว ฟิล์มใส ไม่เปลี่ยนโทนสี และปลอดจากโครเมียมเฮกซะวาเลนต์</p>
+        <p class="lead" data-i18n-key="features_lead">ป้องกันหมอง ไล่น้ำ แห้งเร็ว ฟิล์มใส ไม่เปลี่ยนโทนสี และปราศจากโครเมียมเฮกซะวาเลนต์</p>
 
         <div class="features__grid">
           <article class="features__item">
             <div class="features__icon" aria-hidden="true">✨</div>
-            <h3 class="features__title">ฟิล์มใสคงความเงา</h3>
-            <p class="features__desc">ปกป้องผิวโดย <strong>ไม่เปลี่ยนสี</strong> งานยังดูเป็นธรรมชาติ</p>
+            <h3 class="features__title" data-i18n-key="feat_1_t">ฟิล์มใสคงความเงา</h3>
+            <p class="features__desc" data-i18n-key="feat_1_d">ปกป้องผิวโดย <strong>ไม่เปลี่ยนสี</strong> งานยังดูเป็นธรรมชาติ</p>
           </article>
 
           <article class="features__item">
             <div class="features__icon" aria-hidden="true">💧</div>
-            <h3 class="features__title">ไล่น้ำ แห้งเร็ว</h3>
-            <p class="features__desc">ลดคราบด่างจากน้ำ เพิ่มผลผลิตหลังล้างขั้นสุดท้าย</p>
+            <h3 class="features__title" data-i18n-key="feat_2_t">ไล่น้ำ แห้งเร็ว</h3>
+            <p class="features__desc" data-i18n-key="feat_2_d">ลดคราบด่างจากน้ำ เพิ่มผลผลิตหลังล้างขั้นสุดท้าย</p>
           </article>
 
           <article class="features__item">
             <div class="features__icon" aria-hidden="true">🛡️</div>
-            <h3 class="features__title">กันออกซิเดชัน</h3>
-            <p class="features__desc">ลดการเกิดคราบหมองของ <strong>ทองแดง/ทองเหลือง</strong> ได้ยาวนาน</p>
+            <h3 class="features__title" data-i18n-key="feat_3_t">กันออกซิเดชัน</h3>
+            <p class="features__desc" data-i18n-key="feat_3_d">ลดการเกิดคราบหมองของ <strong>ทองแดง/ทองเหลือง</strong> ได้ยาวนาน</p>
           </article>
 
           <article class="features__item">
             <div class="features__icon" aria-hidden="true">🌡️</div>
-            <h3 class="features__title">ช่วงใช้งานยืดหยุ่น</h3>
-            <p class="features__desc">ทำงานได้ที่ <strong>20–50 °C</strong> จุ่มเพียง <strong>5–15 วิ.</strong></p>
+            <h3 class="features__title" data-i18n-key="feat_4_t">ช่วงใช้งานยืดหยุ่น</h3>
+            <p class="features__desc" data-i18n-key="feat_4_d">ทำงานได้ที่ <strong>20–50 °C</strong> จุ่มเพียง <strong>5–15 วิ.</strong></p>
           </article>
 
           <article class="features__item">
             <div class="features__icon" aria-hidden="true">🧪</div>
-            <h3 class="features__title">ใช้งานง่าย</h3>
-            <p class="features__desc">ความเข้มข้นทั่วไป <strong>2–5%</strong> (งาน PCB <strong>50 cc/L</strong>)</p>
+            <h3 class="features__title" data-i18n-key="feat_5_t">ใช้งานง่าย</h3>
+            <p class="features__desc" data-i18n-key="feat_5_d">ความเข้มข้นทั่วไป <strong>2–5%</strong> (งาน PCB <strong>50 cc/L</strong>)</p>
           </article>
 
           <article class="features__item">
             <div class="features__icon" aria-hidden="true">♻️</div>
-            <h3 class="features__title">ปราศจาก Cr⁶⁺</h3>
-            <p class="features__desc">ละลายน้ำได้ดี <strong>ไม่มีโครเมียมเฮกซะวาเลนต์/คีเลท</strong></p>
+            <h3 class="features__title" data-i18n-key="feat_6_t">ปลอดสารต้องห้าม</h3>
+            <p class="features__desc" data-i18n-key="feat_6_d">ละลายน้ำได้ดี <strong>ไม่มีโครเมียมเฮกซะวาเลนต์/คีเลท</strong></p>
           </article>
         </div>
       </section>
@@ -286,31 +286,31 @@
       <!-- Usage ratios -->
       <section id="usage" class="reveal section-block" aria-labelledby="usage-h">
         <h2 id="usage-h" class="section" data-i18n-key="usage_h">สัดส่วนการใช้งาน</h2>
-        <p class="lead">ค่ามาตรฐานสำหรับงานทั่วไปและงาน PCB</p>
+        <p class="lead" data-i18n-key="usage_lead">ค่ามาตรฐานสำหรับงานทั่วไปและงาน PCB</p>
         <div class="table">
           <table>
             <thead>
               <tr>
-                <th>พารามิเตอร์</th>
-                <th>ค่าแนะนำ</th>
-                <th>หมายเหตุ</th>
+                <th data-i18n-key="table_param">พารามิเตอร์</th>
+                <th data-i18n-key="table_rec">ค่าแนะนำ</th>
+                <th data-i18n-key="table_note">หมายเหตุ</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>Anti-tarnish for Copper</td>
-                <td>2–5 %</td>
-                <td>งาน PCB ใช้ <strong>50 cc/L</strong></td>
+                <td data-i18n-key="usage_comp">Anti-tarnish for Copper</td>
+                <td data-i18n-key="usage_pct">2–5 %</td>
+                <td data-i18n-key="usage_pcb">งาน PCB ใช้ <strong>50 cc/L</strong></td>
               </tr>
               <tr>
-                <td>อุณหภูมิ</td>
-                <td>20–50 °C</td>
-                <td>อุณหภูมิห้องถึงอุ่น</td>
+                <td data-i18n-key="usage_temp_lbl">อุณหภูมิ</td>
+                <td data-i18n-key="usage_temp_val">20–50 °C</td>
+                <td data-i18n-key="usage_temp_note">อุณหภูมิห้องถึงอุ่น</td>
               </tr>
               <tr>
-                <td>เวลาในการจุ่ม</td>
-                <td>5–15 วินาที</td>
-                <td>ปรับตามชิ้นงาน/สายการผลิต</td>
+                <td data-i18n-key="usage_time_lbl">เวลาในการจุ่ม</td>
+                <td data-i18n-key="usage_time_val">5–15 วินาที</td>
+                <td data-i18n-key="usage_time_note">ปรับตามชิ้นงาน/สายการผลิต</td>
               </tr>
             </tbody>
           </table>
@@ -320,26 +320,26 @@
       <!-- Make-up example -->
       <section id="makeup" class="reveal section-block" aria-labelledby="makeup-h">
         <h2 id="makeup-h" class="section" data-i18n-key="makeup_h">ตัวอย่างการผสม</h2>
-        <p class="lead">ตัวอย่าง: เตรียมน้ำยา 1 ลิตร</p>
+        <p class="lead" data-i18n-key="makeup_lead">ตัวอย่าง: เตรียมน้ำยา 1 ลิตร</p>
         <div class="table">
           <table>
             <thead>
               <tr>
-                <th>ส่วนผสม</th>
-                <th>ปริมาณ</th>
-                <th>วิธีการ</th>
+                <th data-i18n-key="mk_comp">ส่วนผสม</th>
+                <th data-i18n-key="mk_qty">ปริมาณ</th>
+                <th data-i18n-key="mk_method">วิธีการ</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>Anti-tarnish for Copper (คอนเซนเทรต)</td>
-                <td>20 ซีซี</td>
-                <td>ตวงให้แม่นยำ</td>
+                <td data-i18n-key="mk_item_1">Anti-tarnish for Copper (คอนเซนเทรต)</td>
+                <td data-i18n-key="mk_item_1_qty">20 ซีซี</td>
+                <td data-i18n-key="mk_item_1_note">ตวงให้แม่นยำ</td>
               </tr>
               <tr>
-                <td>น้ำกลั่น/DI</td>
-                <td>เติมจนครบ 1 ลิตร</td>
-                <td>กวนให้เข้ากันจนใสสม่ำเสมอ</td>
+                <td data-i18n-key="mk_item_2">น้ำกลั่น/DI</td>
+                <td data-i18n-key="mk_item_2_qty">เติมจนครบ 1 ลิตร</td>
+                <td data-i18n-key="mk_item_2_note">กวนให้เข้ากันจนใสสม่ำเสมอ</td>
               </tr>
             </tbody>
           </table>
@@ -351,9 +351,9 @@
         <h2 id="equip-h" class="section" data-i18n-key="equip_h">ภาชนะ & อุปกรณ์</h2>
         <div class="content">
           <ul>
-            <li><strong>ตัวถัง:</strong> สแตนเลส, โพลีเอทิลีน (PE), โพลิโพรพิลีน (PP)</li>
-            <li><strong>ฮีตเตอร์ (ถ้าต้องการอุ่น):</strong> แก้ว, เทฟลอน (PTFE), สแตนเลส, เซรามิก หรือแกรไฟต์</li>
-            <li><strong>การทำให้แห้ง:</strong> เป่าลม/อบอุ่นหลังจุ่ม เพื่อผลไล่น้ำที่ดี</li>
+            <li data-i18n-key="equip_1"><strong>ตัวถัง:</strong> สแตนเลส, โพลีเอทิลีน (PE), โพลิโพรพิลีน (PP)</li>
+            <li data-i18n-key="equip_2"><strong>ฮีตเตอร์ (ถ้าต้องการอุ่น):</strong> แก้ว, เทฟลอน (PTFE), สแตนเลส, เซรามิก หรือแกรไฟต์</li>
+            <li data-i18n-key="equip_3"><strong>การทำให้แห้ง:</strong> เป่าลม/อบอุ่นหลังจุ่ม เพื่อผลไล่น้ำที่ดี</li>
           </ul>
         </div>
       </section>
@@ -363,11 +363,11 @@
         <h2 id="process-h" class="section" data-i18n-key="process_h">ขั้นตอนการทำงาน</h2>
         <div class="content">
           <ol>
-            <li>เตรียมผิว: ชุบทองแดง/ทองเหลืองเสร็จ หรือทำความสะอาด/กัดเงาเรียบร้อย</li>
-            <li>ล้างน้ำสะอาด</li>
-            <li>จุ่มน้ำกลั่น</li>
-            <li>จุ่ม <strong>Anti-tarnish for Copper</strong> 5–15 วินาที</li>
-            <li>เป่าหรืออบให้แห้ง</li>
+            <li data-i18n-key="proc_1">เตรียมผิว: ชุบทองแดง/ทองเหลืองเสร็จ หรือทำความสะอาด/กัดเงาเรียบร้อย</li>
+            <li data-i18n-key="proc_2">ล้างน้ำสะอาด</li>
+            <li data-i18n-key="proc_3">จุ่มน้ำกลั่น</li>
+            <li data-i18n-key="proc_4">จุ่ม <strong>Anti-tarnish for Copper</strong> 5–15 วินาที</li>
+            <li data-i18n-key="proc_5">เป่าหรืออบให้แห้ง</li>
           </ol>
         </div>
       </section>
@@ -376,7 +376,7 @@
       <section id="tips" class="reveal section-block" aria-labelledby="tips-h">
         <h2 id="tips-h" class="section" data-i18n-key="tips_h">ข้อเสนอแนะ</h2>
         <div class="content">
-          <p><strong>สำคัญ:</strong> ก่อนจุ่มน้ำยากันหมอง ต้องล้างความเป็นกรดออกจากผิวให้หมด <em>หากกรดยังค้างอยู่ จะลดประสิทธิภาพของน้ำยา</em></p>
+          <p data-i18n-key="tips_p1"><strong>สำคัญ:</strong> ก่อนจุ่มน้ำยากันหมอง ต้องล้างความเป็นกรดออกจากผิวให้หมด <em>หากกรดยังค้างอยู่ จะลดประสิทธิภาพของน้ำยา</em></p>
         </div>
       </section>
 
@@ -384,7 +384,7 @@
       <section id="performance" class="reveal section-block" aria-labelledby="perf-h">
         <h2 id="perf-h" class="section" data-i18n-key="perf_h">ประสิทธิภาพการทดสอบ</h2>
         <div class="content">
-          <p>ฟิล์มที่เกิดขึ้นมีความทนต่อการขีดข่วน และสามารถทน <strong>Humidity Test ~200 ชั่วโมง</strong> (ค่าทั่วไปขึ้นกับสภาพหน้างานและการเตรียมผิว)</p>
+          <p data-i18n-key="perf_p1">ฟิล์มที่เกิดขึ้นมีความทนต่อการขีดข่วน และสามารถทน <strong>Humidity Test ~200 ชั่วโมง</strong> (ค่าทั่วไปขึ้นกับสภาพหน้างานและการเตรียมผิว)</p>
         </div>
       </section>
 
@@ -431,7 +431,8 @@
       <div class="footer-bottom"><div data-i18n-key="footer_copy">© 2025 Baume Chemical. All rights reserved.</div></div>
     </div>
   </footer>
-  <!-- Reveal on scroll -->
+
+    <!-- Reveal on scroll -->
   <script>
     const revealEls = document.querySelectorAll('.reveal');
     const revObs = new IntersectionObserver((entries,obs)=>{
@@ -440,13 +441,14 @@
     revealEls.forEach(el=>revObs.observe(el));
   </script>
 
-  <!-- I18N + Lang switch -->
+  <!-- I18N + Lang switch (updated with all keys used in part 2) -->
   <script>
     const I18N = {
       th: {
         title:"Anti-Tarnish for Copper — น้ำยากันหมองทองแดง/ทองเหลือง | Baume Chemical Blog",
         nav_home:"Home", nav_about:"About us", nav_products:"Products", nav_contact:"Contact Us", nav_blog:"Blog",
         back_home:"← กลับเมนูหลัก",
+
         hero_title:"Anti-Tarnish for Copper: น้ำยากันหมองทองแดง/ทองเหลือง",
         hero_tagline:"ฟิล์มใสปกป้องผิว ไล่น้ำ แห้งเร็ว ใช้งาน 2–5% (งาน PCB 50 cc/L) ช่วงอุณหภูมิ 20–50 °C จุ่ม 5–15 วินาที",
 
@@ -460,17 +462,48 @@
         toc_perf:"ประสิทธิภาพการทดสอบ",
 
         intro_h:"ภาพรวมผลิตภัณฑ์",
-        intro_p1:"สารป้องกันการหมอง (Anti-Tarnish Agent) สำหรับทองแดงและทองเหลือง ใช้เป็นขั้นตอนสุดท้ายหลังการชุบหรือการกัดเงา เพื่อป้องกันคราบออกไซด์และช่วยไล่คราบน้ำ ทำให้ผิวโลหะคงความเงางามได้นานขึ้น 💧",
+        intro_p1:"สารป้องกันการหมอง (Anti-Tarnish Agent) สำหรับทองแดงและทองเหลือง ใช้เป็นขั้นตอนสุดท้ายหลังการชุบ/กัดเงา เพื่อป้องกันคราบออกไซด์และช่วยไล่คราบน้ำ ทำให้ผิวโลหะคงความเงางามได้ยาวนานขึ้น 💧",
+        intro_p2:"กลไกคือการสร้าง ชั้นฟิล์มใสบาง ๆ บนผิวโลหะ เพื่อกั้นออกซิเจน/สารเคมีในอากาศ ลดการเกิดคราบหมอง และช่วยให้ชิ้นงานแห้งเร็ว ลดรอยคราบน้ำ",
 
         features_h:"จุดเด่นของ Anti-Tarnish for Copper",
         features_lead:"ป้องกันหมอง ไล่น้ำ แห้งเร็ว ฟิล์มใส ไม่เปลี่ยนโทนสี และปราศจากโครเมียมเฮกซะวาเลนต์",
+        feat_1_t:"ฟิล์มใสคงความเงา",     feat_1_d:"ปกป้องผิวโดย ไม่เปลี่ยนสี งานยังดูเป็นธรรมชาติ",
+        feat_2_t:"ไล่น้ำ แห้งเร็ว",       feat_2_d:"ลดคราบด่างจากน้ำ เพิ่มผลผลิตหลังล้างขั้นสุดท้าย",
+        feat_3_t:"กันออกซิเดชัน",        feat_3_d:"ลดการเกิดคราบหมองของ ทองแดง/ทองเหลือง ได้ยาวนาน",
+        feat_4_t:"ช่วงใช้งานยืดหยุ่น",    feat_4_d:"ทำงานได้ที่ 20–50 °C จุ่มเพียง 5–15 วิ.",
+        feat_5_t:"ใช้งานง่าย",            feat_5_d:"ความเข้มข้นทั่วไป 2–5% (งาน PCB 50 cc/L)",
+        feat_6_t:"ปลอดสารต้องห้าม",       feat_6_d:"ละลายน้ำได้ดี ไม่มีโครเมียมเฮกซะวาเลนต์/คีเลท",
 
         usage_h:"สัดส่วนการใช้งาน",
+        usage_lead:"ค่ามาตรฐานสำหรับงานทั่วไปและงาน PCB",
+        table_param:"พารามิเตอร์", table_rec:"ค่าแนะนำ", table_note:"หมายเหตุ",
+        usage_comp:"Anti-tarnish for Copper", usage_pct:"2–5 %", usage_pcb:"งาน PCB ใช้ 50 cc/L",
+        usage_temp_lbl:"อุณหภูมิ", usage_temp_val:"20–50 °C", usage_temp_note:"อุณหภูมิห้องถึงอุ่น",
+        usage_time_lbl:"เวลาในการจุ่ม", usage_time_val:"5–15 วินาที", usage_time_note:"ปรับตามชิ้นงาน/สายการผลิต",
+
         makeup_h:"ตัวอย่างการผสม",
+        makeup_lead:"ตัวอย่าง: เตรียมน้ำยา 1 ลิตร",
+        mk_comp:"ส่วนผสม", mk_qty:"ปริมาณ", mk_method:"วิธีการ",
+        mk_item_1:"Anti-tarnish for Copper (คอนเซนเทรต)", mk_item_1_qty:"20 ซีซี", mk_item_1_note:"ตวงให้แม่นยำ",
+        mk_item_2:"น้ำกลั่น/DI", mk_item_2_qty:"เติมจนครบ 1 ลิตร", mk_item_2_note:"กวนให้เข้ากันจนใสสม่ำเสมอ",
+
         equip_h:"ภาชนะ & อุปกรณ์",
+        equip_1:"ตัวถัง: สแตนเลส, โพลีเอทิลีน (PE), โพลิโพรพิลีน (PP)",
+        equip_2:"ฮีตเตอร์ (ถ้าต้องการอุ่น): แก้ว, เทฟลอน (PTFE), สแตนเลส, เซรามิก หรือแกรไฟต์",
+        equip_3:"การทำให้แห้ง: เป่าลม/อบอุ่นหลังจุ่ม เพื่อผลไล่น้ำที่ดี",
+
         process_h:"ขั้นตอนการทำงาน",
+        proc_1:"เตรียมผิว: ชุบทองแดง/ทองเหลืองเสร็จ หรือทำความสะอาด/กัดเงาเรียบร้อย",
+        proc_2:"ล้างน้ำสะอาด",
+        proc_3:"จุ่มน้ำกลั่น",
+        proc_4:"จุ่ม Anti-tarnish for Copper 5–15 วินาที",
+        proc_5:"เป่าหรืออบให้แห้ง",
+
         tips_h:"ข้อเสนอแนะ",
+        tips_p1:"สำคัญ: ก่อนจุ่มน้ำยากันหมอง ต้องล้างความเป็นกรดออกจากผิวให้หมด หากกรดยังค้างอยู่ จะลดประสิทธิภาพของน้ำยา",
+
         perf_h:"ประสิทธิภาพการทดสอบ",
+        perf_p1:"ฟิล์มที่เกิดขึ้นมีความทนต่อการขีดข่วน และสามารถทน Humidity Test ~200 ชั่วโมง (ค่าทั่วไปขึ้นกับสภาพหน้างานและการเตรียมผิว)",
 
         footer_products:"หมวดผลิตภัณฑ์", footer_contact:"ติดต่อเรา", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       },
@@ -479,8 +512,9 @@
         title:"Anti-Tarnish for Copper — Protective Final Rinse | Baume Chemical Blog",
         nav_home:"Home", nav_about:"About us", nav_products:"Products", nav_contact:"Contact Us", nav_blog:"Blog",
         back_home:"← Back to Home",
+
         hero_title:"Anti-Tarnish for Copper",
-        hero_tagline:"Clear protective film, water-repelling, fast-dry. Use 2–5% (PCB: 50 cc/L) at 20–50 °C, 5–15 s dip.",
+        hero_tagline:"Clear protective film, water-repelling, fast-dry. Use 2–5% (PCB 50 cc/L), 20–50 °C, 5–15 s dip.",
 
         toc_title:"Contents",
         toc_features:"Key features",
@@ -492,17 +526,48 @@
         toc_perf:"Performance",
 
         intro_h:"Product overview",
-        intro_p1:"Anti-Tarnish Agent for copper/brass is used as the final rinse to prevent oxide tarnish and to shed water, keeping the metal glossy for longer. 💧",
+        intro_p1:"Anti-tarnish agent for copper/brass used as the final rinse to prevent oxide tarnish and shed water, keeping the finish glossy for longer. 💧",
+        intro_p2:"It forms a thin, invisible clear film that shields the surface from oxygen/airborne chemicals, reducing tarnish and promoting fast drying to minimize water marks.",
 
         features_h:"Anti-Tarnish Highlights",
         features_lead:"Anti-tarnish, water-repellent, fast-dry, clear film, no color shift, Cr⁶⁺-free.",
+        feat_1_t:"Clear film, glossy look",  feat_1_d:"Protects without color shift—keeps a natural appearance.",
+        feat_2_t:"Water-shedding & fast-dry", feat_2_d:"Cuts water staining and boosts throughput after final rinse.",
+        feat_3_t:"Oxidation protection",      feat_3_d:"Longer-lasting finish on copper and brass.",
+        feat_4_t:"Flexible operating range",   feat_4_d:"Works at 20–50 °C with just 5–15 s dip.",
+        feat_5_t:"Simple to use",              feat_5_d:"Typical use 2–5% (PCB: 50 cc/L).",
+        feat_6_t:"Cr⁶⁺-free & chelate-free",   feat_6_d:"Water-soluble; no hexavalent chromium/chelates.",
 
         usage_h:"Usage ratios",
+        usage_lead:"Standard settings for general and PCB work",
+        table_param:"Parameter", table_rec:"Recommended", table_note:"Notes",
+        usage_comp:"Anti-tarnish for Copper", usage_pct:"2–5 %", usage_pcb:"PCB work: 50 cc/L",
+        usage_temp_lbl:"Temperature", usage_temp_val:"20–50 °C", usage_temp_note:"Ambient to warm",
+        usage_time_lbl:"Dip time", usage_time_val:"5–15 s", usage_time_note:"Adjust to part/line",
+
         makeup_h:"Make-up example",
+        makeup_lead:"Example: prepare 1 liter",
+        mk_comp:"Component", mk_qty:"Quantity", mk_method:"Method",
+        mk_item_1:"Anti-tarnish for Copper (concentrate)", mk_item_1_qty:"20 cc", mk_item_1_note:"Measure accurately",
+        mk_item_2:"DI water", mk_item_2_qty:"Top up to 1 L", mk_item_2_note:"Stir until clear and uniform",
+
         equip_h:"Vessels & equipment",
+        equip_1:"Tank: stainless steel, PE, or PP",
+        equip_2:"Heater (optional): glass, PTFE, stainless, ceramic, or graphite",
+        equip_3:"Drying: air blow / warm oven after dip for better water-shedding",
+
         process_h:"Process steps",
+        proc_1:"Prep: finished Cu/Br plating or cleaned/bright-dipped parts",
+        proc_2:"Rinse with water",
+        proc_3:"Dip in DI water",
+        proc_4:"Dip in Anti-tarnish for Copper for 5–15 s",
+        proc_5:"Blow-dry or warm-dry",
+
         tips_h:"Tips",
+        tips_p1:"Important: remove all residual acidity before the anti-tarnish dip; leftover acid reduces performance.",
+
         perf_h:"Performance",
+        perf_p1:"Film resists abrasion and can endure ~200 h humidity test (typical; depends on prep and conditions).",
 
         footer_products:"Products", footer_contact:"Contact Us", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       }
