upload all files

--- a/products.html
+++ b/products.html
@@ -304,6 +304,7 @@
             <li><a href="about-us.html" class="nav-link">About us</a></li>
             <li><a href="products.html" class="nav-link" aria-current="page">Products</a></li>
             <li><a href="contact-us.html" class="nav-link">Contact Us</a></li>
+            <li><a href="blog/index.html" class="nav-link">Blog</a></li>
           </ul>
         </nav>
 
