--- a/contact-us.html
+++ b/contact-us.html
@@ -359,7 +359,8 @@
             <li><a href="index.html" class="nav-link">Home</a></li>
             <li><a href="about-us.html" class="nav-link">About us</a></li>
             <li><a href="products.html" class="nav-link">Products</a></li>
-            <li><a href="contact-us.html" class="nav-link">Contact Us</a></li>
+            <li><a href="contact-us.html" class="nav-link" aria-current="page">Contact Us</a></li>
+            <li><a href="blog/index.html" class="nav-link">Blog</a></li>
           </ul>
         </nav>
 
