--- a/products/platingcoating/brassplating/index.html
+++ b/products/platingcoating/brassplating/index.html
@@ -204,10 +204,11 @@
       <div class="header-right">
         <nav id="primary-nav" class="primary-nav" aria-label="Primary">
           <ul class="menu">
-            <li><a href="https://www.baumechemical.com/index.html" class="nav-link">Home</a></li>
-            <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link">About us</a></li>
-            <li><a href="https://www.baumechemical.com/products.html" class="nav-link">Products</a></li>
-            <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link">Contact Us</a></li>
+        <a href="https://www.baumechemical.com/index.html" data-i18n-key="nav_home">Home</a>
+        <a href="https://www.baumechemical.com/about-us.html" data-i18n-key="nav_about">About us</a>
+        <a href="https://www.baumechemical.com/products.html" data-i18n-key="nav_products" aria-current="page">Products</a>
+        <a href="https://www.baumechemical.com/contact-us.html" data-i18n-key="nav_contact">Contact Us</a>
+        <a href="https://www.baumechemical.com/blog/" data-i18n-key="nav_blog">Blog</a>
           </ul>
         </nav>
 
