--- a/products/platingcoating/nickelplating/index.html
+++ b/products/platingcoating/nickelplating/index.html
@@ -268,11 +268,11 @@ body.no-scroll{ position:fixed; width:100% }
         <!-- Primary Navigation -->
         <nav class="primary-nav" aria-label="Primary">
           <ul class="menu">
-            <li><a href="https://www.baumechemical.com/index.html" class="nav-link">Home</a></li>
-            <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link">About us</a></li>
-            <li><a href="https://www.baumechemical.com/products.html" class="nav-link" aria-current="page">Products</a></li>
-            <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link">Contact Us</a></li>
-            <li><a href="https://www.baumechemical.com/blog/index.html" class="nav-link" data-i18n-key="nav_contact">Blog</a></li>
+        <a href="https://www.baumechemical.com/index.html" data-i18n-key="nav_home">Home</a>
+        <a href="https://www.baumechemical.com/about-us.html" data-i18n-key="nav_about">About us</a>
+        <a href="https://www.baumechemical.com/products.html" data-i18n-key="nav_products" aria-current="page">Products</a>
+        <a href="https://www.baumechemical.com/contact-us.html" data-i18n-key="nav_contact">Contact Us</a>
+        <a href="https://www.baumechemical.com/blog/" data-i18n-key="nav_blog">Blog</a>
 
             <!-- Mobile language row -->
             <li class="lang-li">
