--- a/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html
@@ -177,11 +177,11 @@
       </button>
 
       <nav id="primary-nav" class="primary-nav" aria-label="Primary" aria-hidden="true">
-        <a href="https://www.baumechemical.com/index.html">Home</a>
-        <a href="https://www.baumechemical.com/about-us.html">About us</a>
-        <a href="https://www.baumechemical.com/products.html" aria-current="page">Products</a>
-        <a href="https://www.baumechemical.com/contact-us.html">Contact Us</a>
-        <a href="https://www.baumechemical.com/blog/index.html">Blog</a>
+        <a href="https://www.baumechemical.com/index.html" data-i18n-key="nav_home">Home</a>
+        <a href="https://www.baumechemical.com/about-us.html" data-i18n-key="nav_about">About us</a>
+        <a href="https://www.baumechemical.com/products.html" data-i18n-key="nav_products" aria-current="page">Products</a>
+        <a href="https://www.baumechemical.com/contact-us.html" data-i18n-key="nav_contact">Contact Us</a>
+        <a href="https://www.baumechemical.com/blog/" data-i18n-key="nav_blog">Blog</a>
 
         <div class="lang-switch" role="group" aria-label="Language switcher">
           <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
