--- a/products/pretreatment/acidclean.html
+++ b/products/pretreatment/acidclean.html
@@ -8,7 +8,7 @@
   <!-- SEO base -->
   <meta name="description" content="CLEANER No.105 ยาล้างไขมันแบบกรด: หลักการทำงาน การกำจัดคราบไขมัน/สนิมพร้อมกัน อัตราส่วนการใช้ ตารางส่วนผสม วิธีผสม 50 ลิตร การควบคุมบ่อ ค่า °Be, pH และคำเตือนความปลอดภัย">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/pretreatment/cleaner-105/index.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/pretreatment/acidclean.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -21,8 +21,8 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="CLEANER No.105 — ยาล้างไขมันแบบกรด">
   <meta property="og:description" content="ทำความสะอาดคราบไขมันและกัดสนิมในขั้นตอนเดียว ใช้ได้ที่อุณหภูมิห้อง กลิ่นน้อย พร้อมตารางอัตราส่วนใช้งานและวิธีผสม 50 ลิตร">
-  <meta property="og:url" content="https://www.baumechemical.com/products/pretreatment/cleaner-105/index.html">
-  <meta property="og:image" content="https://images.unsplash.com/photo-1581091014534-7debc4e8b6f6?q=80&w=1600&auto=format&fit=crop">
+  <meta property="og:url" content="https://www.baumechemical.com/products/pretreatment/acidclean.html">
+  <meta property="og:image" content="https://i.imgur.com/MLtal0F.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <script type="application/ld+json">
@@ -31,11 +31,11 @@
   "@type": "Product",
   "name": "CLEANER No.105 — ยาล้างไขมันแบบกรด",
   "description": "น้ำยาล้างคราบไขมันพร้อมกัดสนิม เหมาะกับงานจุ่มแช่ กลิ่นน้อย ใช้อุณหภูมิห้อง ปรับอัตราส่วนได้ตามความสกปรก มีวิธีผสม 50 ลิตรและแนวทางควบคุมบ่อ",
-  "image": "https://images.unsplash.com/photo-1581091014534-7debc4e8b6f6?q=80&w=1600&auto=format&fit=crop",
+  "image": "https://i.imgur.com/MLtal0F.jpeg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Pretreatment / Degreaser",
   "inLanguage": "th",
-  "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/pretreatment/cleaner-105/index.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
+  "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/pretreatment/acidclean.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
   "aggregateRating": {"@type":"AggregateRating","ratingValue":"5","reviewCount":"12"}
 }
 </script>
@@ -45,7 +45,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://flagcdn.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1581091014534-7debc4e8b6f6?q=80&w=1600&auto=format&fit=crop"/>
+  <link rel="preload" as="image" href="https://i.imgur.com/MLtal0F.jpeg"/>
 
   <style>
     :root{
@@ -98,7 +98,7 @@
     body.no-scroll{position:fixed;width:100%}
 
     /* ===== Hero ===== */
-    .hero{position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;min-height:clamp(420px,60vh,620px);background:linear-gradient(180deg,rgba(0,0,0,.35),rgba(0,0,0,.6)),url('https://images.unsplash.com/photo-1581091014534-7debc4e8b6f6?q=80&w=1600&auto=format&fit=crop') center/cover no-repeat;padding:28px 16px;padding-top:calc(var(--header-h) + 12px)}
+    .hero{position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;min-height:clamp(420px,60vh,620px);background:linear-gradient(180deg,rgba(0,0,0,.35),rgba(0,0,0,.6)),url('https://i.imgur.com/MLtal0F.jpeg') center/cover no-repeat;padding:28px 16px;padding-top:calc(var(--header-h) + 12px)}
     .hero h1{margin:6px 0 10px;font-weight:800;font-size:clamp(26px,4.2vw,44px);text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{max-width:980px;margin:0 auto;color:#e6f2ef}
     .back-chip{position:absolute;top:calc(var(--header-h) + 10px);left:16px;z-index:1;display:inline-flex;align-items:center;gap:6px;padding:8px 12px;border-radius:999px;font-weight:800;text-decoration:none;background:#fff;border:1px solid rgba(2,8,20,.08);color:#0f172a;box-shadow:var(--shadow-1)}
